# kulala-ls

./: .gitignore  README.md  eslint.config.cjs  eslint.config.mjs  package-lock.json  package.json  rollup.config.mjs  rollup.config.ts  tsconfig.json
pkg/tree-sitter/: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  eslint.config.mjs  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
pkg/tree-sitter-graphql/: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  go.mod  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json  tsconfig.json
pkg/tree-sitter-graphql/bindings/c/: tree-sitter-graphql.h  tree-sitter-graphql.pc.in
pkg/tree-sitter-graphql/bindings/go/: binding.go  binding_test.go
pkg/tree-sitter-graphql/bindings/node/: binding.cc
pkg/tree-sitter-graphql/bindings/python/tests/: test_binding.py
pkg/tree-sitter-graphql/bindings/python/tree_sitter_graphql/: __init__.py  binding.c
pkg/tree-sitter-graphql/bindings/rust/: build.rs  lib.rs
pkg/tree-sitter-graphql/bindings/swift/TreeSitterGraphQL/: graphql.h
pkg/tree-sitter-graphql/queries/: highlights.scm
pkg/tree-sitter-graphql/src/: grammar.json  node-types.json  parser.c
pkg/tree-sitter/bindings/c/: tree-sitter-kulala.pc.in
pkg/tree-sitter/bindings/go/: binding.go  binding_test.go
pkg/tree-sitter/bindings/node/: binding.cc
pkg/tree-sitter/bindings/python/tests/: test_binding.py
pkg/tree-sitter/bindings/rust/: build.rs  lib.rs
pkg/tree-sitter/src/: grammar.json  node-types.json  parser.c
(+28 files in other folders)
