[package]
name = "tree-sitter-graphql"
description = "GraphQL grammar for tree-sitter"
version = "0.0.1"
authors = ["Marco Kellershoff marco@kellershoff.net"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "graphql"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/mistweaverco/graphql-ls"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.1.22"

[dev-dependencies]
tree-sitter = "0.24.1"
