[package]
name = "tree-sitter-kulala"
description = "Kulala grammar for tree-sitter"
version = "0.0.1"
authors = ["Marco Kellershoff marco@kellershoff.net"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "kulala"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/mistweaverco/kulala-ls"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.1.22"

[dev-dependencies]
tree-sitter = "0.24.1"
